[metadata]
name = termin
version = 0.0.1
author = Alex Hutz
author_email = frostiiweeb@gmail.com
description = An easy-to-use CLI maker for Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FrostiiWeeb/termin
project_urls =
    Bug Tracker = https://github.com/FrostiiWeeb/termin/issues
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MPL-2.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src